--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container mx-auto max-w-2xl mt-12 px-4">
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-900">Cloud Task Manager</h1>
+            <h1 class="text-4xl font-bold text-gray-900">Cloud Task Manager Test</h1>
             <p class="text-gray-500 mt-2">A simple and effective way to manage your daily tasks.</p>
         </header>
 
